fixing overflow issue on login for instructions

--- a/react-front-end/src/styles/SpellSetup.css
+++ b/react-front-end/src/styles/SpellSetup.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width:320px) and (max-width:812px) and (orientation:landscape){
+/* @media only screen and (min-width:320px) and (max-width:812px) and (orientation:landscape){
     .spellSetup {
         display: flex;
         flex-wrap: wrap;
@@ -41,7 +41,6 @@
         justify-content: space-between;
         align-items: center;
         position:fixed;
-        /* margin-right: 400px; */
     }
 
     h2 {
@@ -212,7 +211,6 @@
         justify-content: space-between;
         align-items: center;
         position:fixed;
-        /* margin-right: 400px; */
     }
 
     h2 {
@@ -383,7 +381,6 @@
         justify-content: space-between;
         align-items: center;
         position:fixed;
-        /* margin-right: 400px; */
     }
 
     h2 {
@@ -509,7 +506,7 @@
         margin: 0 5%;
         width: 100vw;
     }
-}
+} */
 
 @media only screen and (min-width:1025px) and (max-width:20000px){
     .spellSetup {
@@ -552,11 +549,9 @@
         justify-content: space-between;
         align-items: center;
         position:fixed;
-        /* margin-right: 400px; */
     }
 
     h2 {
-        /* width: 100%; */
         padding-left:10px;
     }
 
